--- a/.github/workflows/maestro-test.yml
+++ b/.github/workflows/maestro-test.yml
@@ -11,11 +11,11 @@ on:
                     - android
 
 env:
-    APP_FILE: ${{ github.event.inputs.platform == 'ios' && 'TEST_BUILD_IOS.app' || 'TEST_BUILD_ANDROID.apk' }}
+    MAESTRO_APP_FILE: ${{ github.event.inputs.platform == 'ios' && 'TEST-BUILD-IOS.app' || 'TEST-BUILD-ANDROID.apk' }}
 
 jobs:
     run-tests:
-        name: Trigger for Maestro tests
+        name: E2E Tests
         timeout-minutes: 15
         runs-on: ubuntu-latest
         steps:
@@ -39,14 +39,14 @@ jobs:
               run: npm install
 
             - name: 🚀 Download App File
-              run: eas build:list --json --limit=1 --platform=${{ github.event.inputs.platform }} --buildProfile=test --non-interactive | jq '.[0].artifacts.buildUrl' | xargs -I {} wget -O ${{ env.APP_FILE }} {}
+              run: eas build:list --json --limit=1 --platform=${{ github.event.inputs.platform }} --buildProfile=test --non-interactive | jq '.[0].artifacts.buildUrl' | xargs -I {} wget -O ${{ env.MAESTRO_APP_FILE }} {}
               shell: bash
 
             - name: 📝 Run Maestro Tests
               uses: mobile-dev-inc/action-maestro-cloud@v1.6.0
               with:
                   api-key: ${{ secrets.MAESTRO_CLOUD_API_KEY }}
-                  app-file: ${{ env.APP_FILE }}
+                  app-file: ${{ env.MAESTRO_APP_FILE }}
 
             - name: Access Outputs
               if: success()
