--- a/.github/workflows/maestro-test.yml
+++ b/.github/workflows/maestro-test.yml
@@ -11,7 +11,7 @@ on:
                     - android
 
 env:
-    MAESTRO_APP_FILE: ${{ github.event.inputs.platform == 'ios' && 'TEST-BUILD-IOS.app' || 'TEST-BUILD-ANDROID.apk' }}
+    MAESTRO_APP_FILE: ${{ github.event.inputs.platform == 'ios' && 'test-build-ios.app' || 'test-build-android.apk' }}
 
 jobs:
     run-tests:
